Update userThreadPool to use Java 21 virtual threads for lightweight I/O tasks